# Recap-YouTube

./: .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
app/: db.py  main.py  routes.py
app/core/: config.py
app/models/: alembic.ini  summary.py
app/models/alembic/: env.py
app/models/migrations/: 2024-08-25_5834df9763c1.py  2024-08-25_a2c38ba11daa.py  2024-08-25_bca215f3d198.py  2024-08-27_b58112e4753a.py
app/static/css/: main.css  tailwind-output.css
app/templates/: base.html
app/templates/pages/: home.html
app/templates/partials/: page.html  recent.html  stats.html
app/views/: exceptions.py  summary.py
infrastructure/: docker-compose.yml
tailwindcss/: package-lock.json  package.json  tailwind.config.js
