[tool.poetry]
name = "recap-yt"
version = "0.1.0"
description = "Get YouTube transcript and use AI to summarize YouTube videos in one click."
authors = ["Faisal Fida"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.2"
Jinja2 = "^3.1.4"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
uvicorn = "^0.30.6"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
